# MedDINOv3-Stroke

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
script/: download_models.py  infer_meddinov3_ich.py  prepare_rsna_splits.py  run_meddinov3_infer.py  test_meddinov3_head.py  train_meddinov3_head.py  train_meddinov3_rsna.py
src/: infer_utils.py
src/meddinov3_stroke/: __init__.py  config.py  feature_extractor.py  head_eval.py  head_model.py  head_train.py  ich_infer.py  infer_utils.py  meddinov3_infer.py  rsna_pipeline.py  rsna_split.py  rsna_train.py
